@@ -39,13 +39,19 @@
     <link rel="icon" type="image/x-icon" href="{{ base_url }}/{{ icon }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
-    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-334f02ec.css">
+    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-1f184bc3.css">
     {% for path in extra_css %}
       <link rel="stylesheet" href="{{ path }}">
     {% endfor %}
     {% block extrahead %}{% endblock %}
   </head>
   <body>
+    {% if repo_name == 'GitHub' %}
+      {% set repo_id = repo_url | replace('https://github.com/', '') %}
+      {% if repo_id[-1:] == '/' %}
+        {% set repo_id = repo_id[:-1] %}
+      {% endif %}
+    {% endif %}
     <div class="backdrop">
       <div class="backdrop-paper"></div>
     </div>
@@ -98,7 +104,6 @@
       </div>
     </main>
     <script src="{{ base_url }}/assets/javascripts/modernizr-79394028.js"></script>
-    {% set repo_id = repo_url | replace('https://github.com/', '') %}
     <script>
       var base_url = '{{ base_url }}';
       var repo_id  = '{{ repo_id }}';
