@@ -2,5 +2,5 @@
   "assets/images/favicon.ico": "assets/images/favicon-e565ddfa.ico",
   "assets/javascripts/application.js": "assets/javascripts/application-d84ecdee.js",
   "assets/javascripts/modernizr.js": "assets/javascripts/modernizr-79394028.js",
-  "assets/stylesheets/application.css": "assets/stylesheets/application-334f02ec.css"
+  "assets/stylesheets/application.css": "assets/stylesheets/application-1f184bc3.css"
 }
