@@ -1,7 +1,3 @@
-{% if repo_name == 'GitHub' %}
-  {% set repo_id = repo_url | replace('https://github.com/', '') %}
-{% endif %}
-
 <!-- Navigation -->
 <nav aria-label="navigation">
 
